@@ -3,6 +3,7 @@ Application Changes:
 - Fixed certain texts in Dark Mode not properly switching to a white color.
 - The checkboxes for the list to set what cyberware and bioware grades are allowed at character creation no longer appears weird in dark mode on machines running Windows 10 or earlier.
 - Fixed various display issues with custom rating names for vehicle mods.
+- Karma cost modifiers that only apply in character creation mode no longer cause characters to be created with less/negative karma, and karma cost modifiers that only apply after character creation no longer cause characters to be created with extra karma. Fixes #4926 and fixes #4918.
 
 Data Changes:
 - Concealed and Regular vehicle armor mods now properly add to their parent's Armor. Fixes #4925.
